@@ -130,6 +130,9 @@ param_remove <- function(urls, keys) {
 #'
 #'@return a character vector containing the encoded (or decoded) versions of "urls".
 #'
+#'@seealso Bob Rudis's \href{https://github.com/hrbrmstr/punycode}{Punycode} package on GitHub, for handling
+#'punycode in URLs.
+#'
 #'@examples
 #'
 #'url_decode("https://en.wikipedia.org/wiki/File:Vice_City_Public_Radio_%28logo%29.jpg")
