@@ -58,4 +58,8 @@ URLdecode("\%gIL")
 url_decode("\%gIL")
 }
 }
+\seealso{
+Bob Rudis's \href{https://github.com/hrbrmstr/punycode}{Punycode} package on GitHub, for handling
+punycode in URLs.
+}
 
